--- a/css/styles.css
+++ b/css/styles.css
@@ -31,8 +31,7 @@ body {
 }
 .container {
   width: 1158px;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 0 15px;
   margin: 0 auto;
   outline: 2px solid red;
 }
@@ -119,11 +118,12 @@ img {
   letter-spacing: 0.02em;
   color: var(--main-backgraund-color);
   max-width: 496px;
+  margin: auto;
   margin-bottom: 48px;
-  margin-left: auto;
-  margin-right: auto;
 }
 .hero-button {
+  margin: 0 auto;
+  display: block;
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -132,6 +132,8 @@ img {
   background-color: var(--accent-passive-color);
   color: var(--main-backgraund-color);
   cursor: pointer;
+  width: 169px;
+  height: 56px;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -155,8 +157,13 @@ img {
   margin: -1px;
 }
 .features-list {
+  display: flex;
+  margin-left: -24px;
 }
 .features-item {
+  width: 264px;
+  flex-basis: calc(100% / 4 - 24px);
+  margin-left: 24px;
 }
 .features-subtitle {
   font-weight: 500;
@@ -208,13 +215,17 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  margin-top: 32px;
 }
 .team-text {
+  margin-top: 8px;
   color: var(--second-text-color);
 }
 /*----------------------------Footer----------------------------*/
 .footer {
   background: var(--main-text-color);
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 .footer-logo {
   font-family: 'Raleway';
@@ -231,13 +242,18 @@ img {
 .footer-text {
   font-weight: 400;
   color: var(--footer-text-color);
+  width: 264px;
+  margin-top: 16px;
 }
 
 /*----------------------------Portfolio----------------------------*/
 .portfolio {
   background-color: var(--main-backgraund-color);
+  padding-top: 96px;
+  padding-bottom: 120px;
 }
 .works-list {
+  display: flex;
 }
 .works-item {
 }
@@ -255,8 +271,15 @@ img {
   background-color: var(--accent-active-color);
 }
 .offers-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -24px;
+  margin-top: -48px;
 }
 .offers-item {
+  flex-basis: calc(100% / 3 -24px);
+  margin-left: 24px;
+  margin-top: 48px;
 }
 .offers-title {
   font-weight: 500;
@@ -264,7 +287,9 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  margin-top: 32px;
 }
 .offers-text {
+  margin-top: 8px;
   color: var(--main-text-color);
 }
