--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,6 @@ body {
   width: 1158px;
   padding: 0 15px;
   margin: 0 auto;
-  outline: 2px solid red;
 }
 .link {
   text-decoration: none;
@@ -54,10 +53,16 @@ img {
 /*----------------------------Header----------------------------*/
 .header {
   background-color: var(--main-backgraund-color);
+  border: 1px solid #e7e9fc;
+}
+.header-container {
+  display: flex;
   padding-top: 24px;
   padding-bottom: 24px;
+  align-items: center;
 }
 .header_navigation {
+  display: flex;
 }
 .header-logo {
   font-family: 'Raleway', sans-serif;
@@ -67,8 +72,11 @@ img {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-text-color);
+  margin-right: 76px;
 }
 .header-list {
+  display: flex;
+  gap: 40px;
 }
 .header-item {
 }
@@ -88,8 +96,11 @@ img {
   color: var(--accent-active-color);
 }
 .adress {
+  margin-left: auto;
 }
 .adress-list {
+  display: flex;
+  gap: 40px;
 }
 .adress-item {
 }
@@ -100,6 +111,8 @@ img {
   line-height: var(--typical-lh);
   letter-spacing: 0.02em;
   color: var(--second-text-color);
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 .adress-link:hover,
 .adress-link:focus {
@@ -134,6 +147,7 @@ img {
   cursor: pointer;
   width: 169px;
   height: 56px;
+  border-radius: 4px;
 }
 .hero-button:hover,
 .hero-button:focus {
@@ -171,6 +185,7 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  margin-bottom: 8px;
 }
 .features-text {
   color: var(--second-text-color);
@@ -188,8 +203,11 @@ img {
   margin-bottom: 72px;
 }
 .doing-list {
+  display: flex;
+  gap: 24px;
 }
 .doing-item {
+  width: calc((100% - 48px) / 3);
 }
 /*----------------------------Team----------------------------*/
 .team {
@@ -204,10 +222,19 @@ img {
   text-transform: capitalize;
   color: var(--main-text-color);
   margin-bottom: 72px;
+  text-align: center;
+  text-transform: capitalize;
 }
 .team-list {
+  display: flex;
+  gap: 24px;
 }
 .team-item {
+  width: calc((100% -72px) / 4);
+}
+.team-cont {
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .team-subtitle {
   font-weight: 500;
@@ -215,11 +242,12 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
-  margin-top: 32px;
+  text-align: center;
 }
 .team-text {
   margin-top: 8px;
   color: var(--second-text-color);
+  text-align: center;
 }
 /*----------------------------Footer----------------------------*/
 .footer {
@@ -254,6 +282,9 @@ img {
 }
 .works-list {
   display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin-bottom: 72px;
 }
 .works-item {
 }
@@ -265,6 +296,10 @@ img {
   letter-spacing: 0.04em;
   color: var(--accent-passive-color);
   cursor: pointer;
+  padding: 12px 24px;
+  border-radius: 4px;
+  border: 1px solid #e7e9fc;
+  background-color: var(--footer-logo-color);
 }
 .works-button:hover,
 .works-button:focus {
@@ -273,13 +308,17 @@ img {
 .offers-list {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -24px;
-  margin-top: -48px;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 .offers-item {
-  flex-basis: calc(100% / 3 -24px);
-  margin-left: 24px;
-  margin-top: 48px;
+  width: calc((100% - 48px) / 3);
+  border: 1px solid #e7e9fc;
+}
+.offers-choice {
+  padding-top: 32px;
+  padding-bottom: 32px;
+  padding-left: 16px;
 }
 .offers-title {
   font-weight: 500;
@@ -287,7 +326,6 @@ img {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
-  margin-top: 32px;
 }
 .offers-text {
   margin-top: 8px;
