--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ h6 {
 }
 ul {
   margin: 0;
-  padding-left: 0;
+  padding: 0;
 }
 body {
   font-family: 'Roboto', sans-serif;
@@ -53,7 +53,7 @@ img {
 /*----------------------------Header----------------------------*/
 .header {
   background-color: var(--main-backgraund-color);
-  border: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
 }
 .header-container {
   display: flex;
