--- a/css/styles.css
+++ b/css/styles.css
@@ -191,6 +191,7 @@ img {
 }
 /*----------------------------Doing----------------------------*/
 .doing {
+  padding-bottom: 120px;
 }
 .doing-title {
   font-size: 36px;
@@ -308,6 +309,8 @@ img {
 .works-button:focus {
   background-color: var(--accent-active-color);
   color: var(--main-backgraund-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 .offers-list {
   display: flex;
